# Guardian

./: .gitignore  Cargo.toml  QUICKSTART.md  README.md  build.sh  dev.sh  run.sh  seed_events.py
guardian-bridge/: Cargo.toml
guardian-bridge/src/: main.rs
guardian-common/: Cargo.toml
guardian-common/src/: lib.rs
guardian-daemon/: Cargo.toml
guardian-daemon/src/: main.rs  rules.rs  scanner.rs
guardian-sentinel/: index.html  package-lock.json  package.json  tsconfig.node.json
guardian-sentinel/src/: App.css  App.tsx  index.css
guardian-sentinel/src-tauri/: Cargo.toml  tauri.conf.json
guardian-sentinel/src-tauri/binaries/: guardian-daemon
guardian-sentinel/src-tauri/src/: database.rs  lib.rs  main.rs
guardian-sentinel/src/components/common/: Pagination.css  Pagination.tsx  SearchBar.css  SearchBar.tsx
guardian-sentinel/src/components/dashboard/: MonitoringDashboard.css  MonitoringDashboard.tsx  StatCard.tsx  StatsGrid.tsx
guardian-sentinel/src/components/events/: EventsTable.css  EventsTable.tsx
guardian-sentinel/src/components/layout/: Header.tsx  Sidebar.css  Sidebar.tsx
guardian-sentinel/src/hooks/: useEvents.ts
guardian-sentinel/src/services/: eventService.ts
guardian-sentinel/src/types/: index.ts
guardian-sentinel/src/utils/: formatting.ts
