[workspace]
resolver = "2"
members = [
    "guardian-common",
    "guardian-daemon",
    "guardian-bridge",
    "guardian-sentinel/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Guardian Team"]
license = "MIT"

[workspace.dependencies]
# Shared dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"

# Monitoring & System
sysinfo = "0.30"
notify = "6.1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }

# Tauri
tauri = { version = "2.0", features = ["protocol-asset"] }
tauri-plugin-shell = "2.0"
