[package]
name = "guardian-bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "guardian-bridge"
path = "src/main.rs"

[dependencies]
guardian-common = { path = "../guardian-common" }

# Async runtime
tokio.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Database
sqlx.workspace = true

# Error handling
anyhow.workspace = true

# Utilities
chrono.workspace = true
uuid.workspace = true
