[package]
name = "guardian-sentinel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "guardian_sentinel_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
guardian-common = { path = "../../guardian-common" }

# Tauri
tauri.workspace = true
tauri-plugin-shell.workspace = true
serde.workspace = true
serde_json.workspace = true

# Database
sqlx.workspace = true

# Async runtime
tokio.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Utilities
chrono.workspace = true
uuid.workspace = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
